tests/baselines/reference/nodeResolution7.errors.txt
tests/cases/compiler/b.ts(1,20): error TS2656: Exported external package typings file 'tests/cases/compiler/node_modules/a/index.d.ts' is not a module. Please contact the package author to update the package definition.


==== tests/cases/compiler/b.ts (1 errors) ====
    import y = require("a"); 
                       ~~~
!!! error TS2656: Exported external package typings file 'index.d.ts' is not a module. Please contact the package author to update the package definition.
    
==== tests/cases/compiler/node_modules/a/index.d.ts (0 errors) ====
    
    declare module "a" {
        var x: number;
    }
    